# matplotlibtool

./: pyproject.toml  setup.py
matplotlibtool/: ArrayFieldIntegration.py  ArrayFieldManager.py  ArrayFieldScaleRow.py  ArrayFieldVisibilityRow.py  AxisSecondaryConfig.py  AxisSecondaryIntegration.py  AxisSecondaryManager.py  AxisSecondaryManagerDual.py  BusyIndicatorManager.py  ColorManager.py  ControlBarIntegration.py  ControlBarManager.py  CoordinateTransformEngine.py  FileLoaderRegistry.py  GridManager.py  KeyboardInputManager.py  MouseMode.py  Plot2D.py  Plot2DInteractions.py  Plot2DOverlay.py  Plot2DRenderer.py  PlotDataProcessor.py  PlotEventHandlers.py  PlotGroupContext.py  PlotManager.py  PointHover.py  SettleAnalysis.py  ViewHistory.py  ViewManager.py  __init__.py  cli.py  color_paletts.py  dark_mode.py  utils.py
