[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "matplotlibtool"
version = "0.0.1760905623"
description = "2D and 3D matplotlib plotting lib for structured arrays"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
dependencies = [
    "asserttool @ git+https://github.com/jakeogh/asserttool",
    "click-auto-help @ git+https://github.com/jakeogh/click-auto-help",
    "clicktool @ git+https://github.com/jakeogh/clicktool",
    "configtool @ git+https://github.com/jakeogh/configtool",
    "globalverbose @ git+https://github.com/jakeogh/globalverbose",
    "iio-gpio-record-decoder @ git+https://github.com/jakeogh/iio-gpio-record-decoder",
    "iioparser @ git+https://github.com/jakeogh/iioparser",
    "matplotlib",
    "numpy",
    "pint",
    "unmp @ git+https://github.com/jakeogh/unmp",
]
requires-python = ">=3.11"

[project.license]
text = "ISC"

[project.urls]
Homepage = "https://github.com/jakeogh/matplotlibtool"

[project.scripts]
matplotlibtool = "matplotlibtool.cli:cli"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
exclude = [
    "tests",
]

[tool.setuptools.package-data]
matplotlibtool = [
    "py.typed",
]
