[build-system]
requires = ["setuptools>=61.0", "tomlkit"]
build-backend = "pep508_url_version_backend"
backend-path = ["."]

[project]
name = "matplotlibtool"
version = "0.0.1761194558"
description = "2D and 3D matplotlib plotting lib for structured arrays"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
# filled in automatically
dependencies = []
license = "ISC"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/jakeogh/matplotlibtool"

[project.scripts]
matplotlibtool = "matplotlibtool.cli:cli"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
exclude = [
    "tests",
]

[tool.setuptools.package-data]
matplotlibtool = [
    "py.typed",
]

[tool.pep508-url-version-backend]
dependencies-indexed = ["asserttool>=0.0.1761033057", "click-auto-help>=0.0.1761041641", "clicktool>=0.0.1761033403", "configtool>=0.0.1761194548", "globalverbose>=0.0.1761031290", "unmp>=0.0.1761031424"]
dependencies-git = [
	"asserttool @ git+https://github.com/jakeogh/asserttool", 
	"click-auto-help @ git+https://github.com/jakeogh/click-auto-help", 
	"clicktool @ git+https://github.com/jakeogh/clicktool", 
	"configtool @ git+https://github.com/jakeogh/configtool", 
	"globalverbose @ git+https://github.com/jakeogh/globalverbose", 
	"unmp @ git+https://github.com/jakeogh/unmp"]
index-urls = ["jakeogh.github.io", "pip-index"]
